--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Instagram Downloader</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'><link rel="stylesheet" href="./style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'><link rel="stylesheet" href="/style.css">
 
 </head>
 <body>
@@ -23,7 +23,7 @@
     <center><div id="footer" style="font-size: 25px; font-family: Handlee; color: white;">Designed & Programmed by <a href="https://www.linkedin.com/in/ahmed-elkashef-0954b191?trk=nav_responsive_tab_profile_pic" style="font-weight:bold;">Ahmed Elkshef</a></div></center>
 <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script><script  src="./script.js"></script>
+<script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script><script  src="/script.js"></script>
 
 </body>
 </html>
