--- a/index.html
+++ b/index.html
@@ -3,8 +3,53 @@
 <head>
   <meta charset="UTF-8">
   <title>CodePen - Instagram Downloader</title>
-  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'><link rel="stylesheet" href="/style.css">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
+<style>
+  @import url(https://fonts.googleapis.com/css?family=Handlee);
+@import url('https://fonts.googleapis.com/css?family=Fjalla+One');
 
+body {
+  background-image: url("http://weknowyourdreams.com/images/adventure/adventure-08.jpg");
+  width: 100%;
+  height: 100%;
+  background-position: 0px 0px;
+}
+
+#header {
+  margin-top: 8%;
+}
+
+h1 {
+  padding-bottom: 0px;
+  margin-bottom: -5px;
+  font-size: 60px;
+  font-weight: 800;
+  font-family: Fjalla One;
+}
+
+input {
+  width: 40%;
+  opacity: 0.7;
+  padding: 5px;
+  margin: 10px;
+}
+button {
+  margin-top: -0.2%;
+}
+
+#footer{
+  padding: 10px;
+  background-color:rgba(0, 0, 0, 0.7);
+  position: relative;
+  top: 210px;
+}
+
+p {
+  font-family: Handlee;
+  font-size: 20px;
+  font-weight: bold;
+}
+  </style>
 </head>
 <body>
 <!-- partial:index.partial.html -->
@@ -18,7 +63,7 @@
         <button class="btn btn-danger">Download</button></center>
     </div>
   </div>
-  <center><p><strong>Psst .. </strong>Make sure that the video is public before trying to download it!</p>
+  <center><p><strong>Pssti .. </strong>Make sure that the video is public before trying to download it!</p>
 </div>  
     <center><div id="footer" style="font-size: 25px; font-family: Handlee; color: white;">Designed & Programmed by <a href="https://www.linkedin.com/in/ahmed-elkashef-0954b191?trk=nav_responsive_tab_profile_pic" style="font-weight:bold;">Ahmed Elkshef</a></div></center>
 <!-- partial -->
