--- a/index.html
+++ b/index.html
@@ -63,10 +63,9 @@ p {
         <button class="btn btn-danger">Download</button></center>
     </div>
   </div>
-  <center><p><strong>Pssti .. </strong>Make sure that the video is public before trying to download it!</p>
+  <center><p><strong>Psst... </strong>Make sure that the video is public before trying to download it!</p>
 </div>  
-    <center><div id="footer" style="font-size: 25px; font-family: Handlee; color: white;">Designed & Programmed by <a href="https://www.linkedin.com/in/ahmed-elkashef-0954b191?trk=nav_responsive_tab_profile_pic" style="font-weight:bold;">Ahmed Elkshef</a></div></center>
-<!-- partial -->
+    <!-- partial -->
   <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js'></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js'></script><script  src="/script.js"></script>
 <script>
