--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" >
 <head>
   <meta charset="UTF-8">
-  <title>CodePen - Instagram Downloader</title>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <title>Instagram Downloader</title>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.min.css'>
 <style>
   @import url(https://fonts.googleapis.com/css?family=Handlee);
